// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle identifier with dashes 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should handle identifier with spaces 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should handle mdx 1`] = `
"<p>import something from 'something';</p>
<p>export const meta = {
prop: 'value',
};</p>
<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should handle no spacing in exceprt comment 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should return after excerpt when multiple exist 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
"
`;

exports[`should return excerpt using "exceprt" identifier 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should return excerpt using "more" identifier 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should return excerpt using "preview" identifier 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should return excerpt using "teaser" identifier 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should return excerpt using custom identifier 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
"
`;

exports[`should return unmodified document when no excerpt exists 1`] = `
"<h1>Title</h1>
<p>Paragraph 1.</p>
<p>Paragraph 2.</p>
<p>Paragraph 3.</p>
<p>Paragraph 4.</p>"
`;
